<resources>
    <string name="app_name">Shariah Equities</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="channel_id" translatable="false">TlismiHerbs-channel</string>
    <string name="channel_name" translatable="false">TlismiHerbs</string>

    <string name="action_search">Search</string>
    <string name="action_status">Status</string>
    <string name="action_settings">Settings</string>
    <string name="add_card">Add Card</string>
    <string name="please_fill_your_card_details_and_make_n_a_secure_payment">Please fill your card details and make \n a secure payment.</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="sana_kamran">Sana Kamran</string>
    <string name="card_number">Card Number</string>
    <string name="_3543_4637_2638_2829">3543 4637 2638 2829</string>
    <string name="expiry_mm_yy">Expiry MM/YY</string>
    <string name="_07_20">07/20</string>
    <string name="security_code">Security Code</string>
    <string name="_789">789</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="checkout">Checkout</string>
    <string name="add_address">Add Address</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="add_promo_code">Add promo code</string>
    <string name="subtotal">Subtotal</string>
    <string name="_00">₹00</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="discount">Discount</string>
    <string name="_0">₹0</string>
    <string name="gst">GST</string>
    <string name="total_bill">Total bill</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="online_payment">Online Payment</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="place_order">Place Order</string>
    <string name="congratulation">Congratulation!</string>
    <string name="your_order_has_been_placed_your_order_reference_number_is_brj388290">Your order has been placed. Your order reference number is BRJ388290.</string>
    <string name="view_order_details">View Order Details</string>
    <string name="street_address">Street Address</string>
    <string name="_12_a_madrasi_street">12 A, Madrasi street</string>
    <string name="city">City</string>
    <string name="mumbai">Mumbai</string>
    <string name="state">State</string>
    <string name="maharashra">Maharashra</string>
    <string name="zid_code">Zid Code</string>
    <string name="_271313">271313</string>
    <string name="product_detail">Product Detail</string>
    <string name="title">title</string>
    <string name="rupee">₹</string>
    <string name="_0_0">0.0</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="help_center">Help Center</string>
    <string name="live_chat">Live Chat</string>
    <string name="call_now">Call Now</string>
    <string name="email">Email</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="search">Search</string>
    <string name="write_question_here">Write question here ?</string>
    <string name="men">Men</string>
    <string name="brands">Brands</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="login">Login</string>
    <string name="sana_example_com">xyz@gmail.com</string>
    <string name="password">Password</string>
    <string name="starts">***********</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="search_here">Search here</string>
    <string name="orders">Orders</string>
    <string name="settings">Settings</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="change_password">Change Password</string>
    <string name="term_amp_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="delete_your_account">Delete Your Account</string>
    <string name="logout">Logout</string>
    <string name="signup">Signup</string>
    <string name="saima_yousuf">xyz</string>
    <string name="email_address">Email address</string>
    <string name="yousuf_example_com">xyz@example.com</string>
    <string name="_03326603430">03326603430</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="wishlist">Wishlist</string>
    <string name="mobile">Mobile</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="store_front">Store Front</string>
    <string name="cards">Cards</string>
    <string name="refer_now">Refer now</string>
    <string name="help">Help</string>
    <string name="_0_items">0 items</string>
    <string name="in_progress">In Progress</string>
    <string name="kids">Kids</string>
    <string name="bridal_wear">Bridal wear</string>
    <string name="sports">Sports</string>
    <string name="formal">Formal</string>
    <string name="winter">Winter</string>
    <string name="men_s_fashion">Men\'s Fashion</string>
    <string name="view_all">View all</string>
    <string name="women_s_fashion">Women\'s Fashion</string>
    <string name="kid_s_fashion">Kid\'s Fashion</string>
    <string name="special_deal">Special Deal</string>
    <string name="delivered">Delivered</string>
    <string name="cancelled">Cancelled</string>
    <string name="login_or_sign_up_now">Login or Sign Up Now!</string>
    <string name="to_unlock_the_full_range_of_features_and_explore_a_diverse_selection_of_clothing_for_men_women_and_kids_simply_log_in_or_sign_up">To unlock the full range of features and explore a diverse selection of clothing for men, women, and kids, simply log in or sign up.</string>
    <string name="sign_up">Sign up</string>
    <string name="refer_and_earn_100">Refer and earn ₹100</string>
    <string name="refer_friends_family_coworkers_neighbours_and_your_favourite_barista_to_storefront_on_every_first_order_you_and_your_friend_will_get_100">Refer friends, family, coworkers, neighbours, and your favourite barista to StoreFront. On every first order you and your friend will get ₹100.</string>
    <string name="copy_link">Copy link</string>
    <string name="share">Share</string>
    <string name="east_west_women_s_absolute_gem_printed">East West Women\'s Absolute Gem Printed</string>
    <string name="small_green">Small, Green</string>
    <string name="_2_450">₹2,450</string>
    <string name="_1_690">₹1,690</string>
    <string name="_1">1</string>
    <string name="max_21_men_s_mossy_oak_printed_fleece_zipper_jacket">Max 21 Men\'s Mossy Oak Printed Fleece Zipper Jacket</string>
    <string name="_2_999">2,999</string>
    <string name="_5_0">5.0</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="shariah_equities">Shariah Equities</string>
    <string name="create_basket">Create basket</string>
    <string name="select_companies_stocks">Select Companies Stocks</string>
    <string name="search_by_name_or_symbol">Search by name or symbol</string>
    <string name="enter_the_name">Enter the name...</string>


</resources>