<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            android:layout_height="wrap_content"
            android:text="@string/select_companies_stocks"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_close_24"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        app:cardCornerRadius="10dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:drawableStart="@drawable/search"
            android:drawablePadding="5dp"
            android:drawableTint="@color/gray_text"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/search_by_name_or_symbol"
            android:inputType="text"
            android:textSize="14sp">

        </androidx.appcompat.widget.AppCompatEditText>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDialogCompanyList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/edtOwnName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/name"
                android:textColor="@color/gray_text"
                android:textSize="12sp">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edOwnName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/enter_the_name"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textSize="11sp"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatEditText>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDialogSave"
        android:layout_width="match_parent"
        android:backgroundTint="@color/main_color"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/create_basket"
        android:layout_marginTop="16dp"/>

</LinearLayout>
