<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:background="@drawable/transplant"
    android:orientation="vertical"
    android:padding="15dp"
    app:circularflow_radiusInDP="40">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#E3E8E7"
            android:elevation="5dp"
            app:cardCornerRadius="15dp"

            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/layoutDateFromDilog"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvDateFromDilog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/change_password"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp">

                    <EditText
                        android:id="@+id/edtFullNameDil"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/corner"
                        android:hint="@string/full_name"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp">

                    <EditText
                        android:id="@+id/edtMobileDil"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/corner"
                        android:hint="@string/mobile"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp">

                    <EditText
                        android:id="@+id/edtCurrentPasswordDialogPass"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/corner"
                        android:hint="@string/current_password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp">

                    <EditText
                        android:id="@+id/edtNewPasswordDialogPass"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/corner"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btnChangeDialogPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/update"
                        android:textAllCaps="false" />

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</LinearLayout>
