<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="?actionBarItemBackground"
            android:padding="5dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:tint="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatTextView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/full_name"
                        android:textColor="@color/gray_text"
                        android:textSize="11sp">

                    </androidx.appcompat.widget.AppCompatTextView>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtFullName"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginStart="10dp"
                        android:background="@null"
                        android:hint="@string/saima_yousuf"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textSize="11sp"
                        android:textStyle="bold">

                    </androidx.appcompat.widget.AppCompatEditText>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/password"
                            android:textColor="@color/gray_text"
                            android:textSize="11sp">

                        </androidx.appcompat.widget.AppCompatTextView>

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:layout_marginStart="10dp"
                            android:background="@null"
                            android:hint="@string/starts"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:textSize="11sp"
                            android:textStyle="bold">

                        </androidx.appcompat.widget.AppCompatEditText>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp">


                        <ImageView
                            android:id="@+id/password_toggle"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:padding="5dp"
                            android:src="@drawable/ic_baseline_visibility_24"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="@+id/passwordEdt"
                            app:layout_constraintEnd_toEndOf="@+id/passwordEdt"
                            app:layout_constraintTop_toTopOf="@+id/passwordEdt"
                            app:tint="@color/black" />

                        <ImageView
                            android:id="@+id/password_toggleOff"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:background="?actionBarItemBackground"
                            android:padding="5dp"
                            android:src="@drawable/ic_baseline_visibility_off_24"
                            app:layout_constraintBottom_toBottomOf="@+id/passwordEdt"
                            app:layout_constraintEnd_toEndOf="@+id/passwordEdt"
                            app:layout_constraintTop_toTopOf="@+id/passwordEdt"
                            app:tint="@color/black" />

                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/email_address"
                        android:textColor="@color/gray_text"
                        android:textSize="11sp">

                    </androidx.appcompat.widget.AppCompatTextView>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginStart="10dp"
                        android:background="@null"
                        android:hint="@string/yousuf_example_com"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textSize="11sp"
                        android:textStyle="bold">

                    </androidx.appcompat.widget.AppCompatEditText>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/phone_number"
                            android:textColor="@color/gray_text"
                            android:textSize="11sp">

                        </androidx.appcompat.widget.AppCompatTextView>

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:layout_marginStart="10dp"
                            android:background="@null"
                            android:hint="@string/_03326603430"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLength="12"
                            android:textSize="11sp"
                            android:textStyle="bold">

                        </androidx.appcompat.widget.AppCompatEditText>
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginTop="170dp"
                android:gravity="bottom"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/gradient_button"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp">

                </androidx.appcompat.widget.AppCompatButton>
             </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>